# polars-fastx

./: .gitignore  README.md  pyproject.toml
src/polars_fastx/: __init__.py  fastx_parsers.py
