[project]
name = "polars-fastx"
version = "0.1.0"
description = "A Polars plugin for parsing FASTA and FASTQ files into DataFrames"
readme = "README.md"
authors = [{ name = "Antonio Camargo", email = "antoniop.camargo@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["needletail>=0.6.3,<0.7.0", "polars>=1.4.0,<2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
